# delta-mem-mlx-sidecar-w-openclaw

./: .gitignore  AGENTS.md  README.md  openclaw.example.json5
benchmarks/: README.md  deterministic_context_list.py  full_delta_mem_bench.py  latency_scatterplot.py  locomo10_sidecar_eval.py  memoryagentbench_sidecar_eval.py  mlx_delta_diagnostics.py  mlx_generation_bench.py  openclaw_altair_report.py  openclaw_memory_eval.py  openclaw_session_replay_eval.py  openclaw_transcript_toolbelt.py  session_memory_eval.py  session_replay_eval.py  sidecar_latency_bench.py  transcript_toolbelt.py
benchmarks/fixtures/: research-claimed-results.jsonl
delta-mem-sidecar/: README.md  pyproject.toml
delta-mem-sidecar/src/delta_mem_sidecar/: __init__.py  app.py  config.py  convert_adapter.py  mlx_delta_adapter.py  mlx_delta_attention.py  mlx_delta_math.py  mlx_runtime.py  official_runtime.py  runtime.py  schemas.py  state.py
delta-mem-sidecar/tests/: test_app.py  test_config.py  test_deterministic_context_list.py  test_full_delta_mem_bench_scoring.py  test_locomo10_sidecar_eval.py  test_mlx_delta_adapter.py  test_mlx_delta_attention.py  test_mlx_delta_attention_upstream_parity.py  test_mlx_delta_math.py  test_mlx_delta_math_torch_parity.py  test_mlx_runtime.py  test_official_runtime.py  test_openclaw_session_replay_eval.py  test_openclaw_transcript_toolbelt.py  test_session_replay_eval.py  test_transcript_toolbelt.py
openclaw-plugin/: README.md  package.json  tsconfig.json  vitest.config.ts
openclaw-plugin/docs/: config-install.md  (+3 more)
wiki/: Benchmark-Findings.md  Home.md
(+13 files in other folders)
